[package]
name = "ai_repl"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustyline = "14.0" # For REPL readline functionality
# spacetimedb-sdk = ... # Depending on how spacetimedb sdk is linked
